# -otus_cpp_01_filter_ip

./: .gitignore  CMakeLists.txt  README.md  ip_addr.h  main.cpp  unit_tests.cpp  work_obj.cpp  work_obj.h
.github/workflows/: actions_config.yml
